<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_sound"
        android:icon="@android:drawable/ic_lock_silent_mode_off"
        android:title="@string/action_sons"
        app:showAsAction="always" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_lge"
        android:icon="@drawable/flag"
        android:title="@string/action_language"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

</menu>