<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/winner"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical|center"
        android:layout_gravity="center"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/ok" />

</LinearLayout>