<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dip">

        <TextView
            android:id="@+id/help_page_intro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="20"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:text="@string/help_intro"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dip">

            <ImageView
                android:id="@+id/help_image1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:background="@drawable/b1"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:padding="8dip"
                android:scrollHorizontally="false"
                android:text="@string/grid_3"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/help_image2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_margin="5dp"
                android:background="@drawable/b2"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:padding="8dip"
                android:text="@string/grid_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/help_image3"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="5dp"
                android:background="@drawable/b3"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:padding="8dip"
                android:text="@string/grid_5" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

