<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.agentk.tictactoe.StartActivity">



        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="startMultilayer"
                android:text="@string/multiplayer"
                android:textAllCaps="false"
                android:textColor="#3F51B5"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:layout_centerHorizontal="true"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="" />

                <EditText
                    android:id="@+id/input_email"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:minWidth="100dp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </LinearLayout>


            <EditText
                android:id="@+id/input_password"
                android:layout_width="wrap_content"
                android:minWidth="100dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:onClick="loginWithEmail"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="#000" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>
</layout>