<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dialog"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/grid3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/_3_x_3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/grid4"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/_4_x_4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/grid5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/_5_x_5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/verifcode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="Re-send code"
        android:textColor="#e8e02c1f"
        android:textSize="14sp" />


</LinearLayout>
